chore: set transactions reference
