# backend/internal/handlers/http/routes/transactions.go
@@ -9,39 +9,36 @@ import (
 	corpts "github.com/realfabecker/wallet/internal/core/ports"
 )
 
-// WalltetController definição de controlador http wallet
-type WalletController struct {
-	repository corpts.WalletRepository
-	service    corpts.WalletService
+type TransactionController struct {
+	repository corpts.TransactionRepository
+	service    corpts.TransactionService
 	auth       corpts.AuthService
 }
 
-// NewWalletController construção de controlador http wallet
-func NewWalletController(
-	walletRepository corpts.WalletRepository,
-	walletService corpts.WalletService,
+func NewTransactionController(
+	walletRepository corpts.TransactionRepository,
+	walletService corpts.TransactionService,
 	auth corpts.AuthService,
-) *WalletController {
-	return &WalletController{walletRepository, walletService, auth}
+) *TransactionController {
+	return &TransactionController{walletRepository, walletService, auth}
 }
 
-// ListUserTransactions get user transactions list
+// ListTransactions list transactions
 //
-//	@Summary		List user transactions
-//
-//	@Description	List user transactions
+//	@Summary		List transactions
+//	@Description	List transactions
 //	@Tags			Transactions
 //	@Security		ApiKeyAuth
 //	@Produce		json
 //	@Param			limit		query		number	true	"Number of records"
 //	@Param			page_token	query		string	false	"Pagination token"
-//	@Param			due_date	query		string	true	"Payment due date"
-//	@Success		200			{object}	cordom.ResponseDTO[cordom.PagedDTO[cordom.Payment]]
+//	@Param			due_date	query		string	true	"Transaction due date"
+//	@Success		200			{object}	cordom.ResponseDTO[cordom.PagedDTO[cordom.Transaction]]
 //	@Failure		400
 //	@Failure		500
 //	@Router			/transactions [get]
-func (w *WalletController) ListUserTransactions(c *fiber.Ctx) error {
-	q := cordom.PaymentPagedDTOQuery{}
+func (w *TransactionController) ListTransactions(c *fiber.Ctx) error {
+	q := cordom.TransactionPagedDTOQuery{}
 	if err := c.QueryParser(&q); err != nil {
 		return fiber.NewError(fiber.StatusBadRequest, err.Error())
 	}
@@ -56,37 +53,37 @@ func (w *WalletController) ListUserTransactions(c *fiber.Ctx) error {
 		return fiber.NewError(fiber.ErrUnauthorized.Code)
 	}
 
-	out, err := w.service.ListPayments(user.Subject, q)
+	out, err := w.service.ListTransactions(user.Subject, q)
 	if err != nil {
 		return fiber.NewError(fiber.StatusBadRequest, err.Error())
 	}
 
-	return c.JSON(cordom.ResponseDTO[cordom.PagedDTO[cordom.Payment]]{
+	return c.JSON(cordom.ResponseDTO[cordom.PagedDTO[cordom.Transaction]]{
 		Status: "success",
 		Data:   out,
 	})
 }
 
-// ListUserTransactions get user transactions list
+// GetTransactionById get a transaction by its id
 //
 //	@Summary		Get transaction by id
 //	@Description	Get transaction by id
 //	@Tags			Transactions
 //	@Security		ApiKeyAuth
 //	@Produce		json
-//	@Param			id	path		string	true	"Payment id"
-//	@Success		200	{object}	cordom.ResponseDTO[cordom.Payment]
+//	@Param			id	path		string	true	"Transaction id"
+//	@Success		200	{object}	cordom.ResponseDTO[cordom.Transaction]
 //	@Failure		400
 //	@Failure		500
-//	@Router			/transactions/{paymentId} [get]
-func (w *WalletController) GetPaymentById(c *fiber.Ctx) error {
-	p := cordom.Payment{}
+//	@Router			/transactions/{transactionId} [get]
+func (w *TransactionController) GetTransactionById(c *fiber.Ctx) error {
+	p := cordom.Transaction{}
 	if err := c.ParamsParser(&p); err != nil {
 		return fiber.NewError(fiber.StatusBadRequest, err.Error())
 	}
 
 	v := validator.NewValidator()
-	if err := v.StructPartial(p, "Id"); err != nil {
+	if err := v.StructPartial(p, "transactionId"); err != nil {
 		return fiber.NewError(fiber.StatusBadRequest, err.Error())
 	}
 
@@ -95,68 +92,68 @@ func (w *WalletController) GetPaymentById(c *fiber.Ctx) error {
 		return fiber.NewError(fiber.ErrUnauthorized.Code)
 	}
 
-	d, err := w.service.GetPaymentById(user.Subject, p.PaymentId)
+	d, err := w.service.GetTransactionById(user.Subject, p.TransactionId)
 	if err != nil {
 		return fiber.NewError(fiber.StatusInternalServerError, err.Error())
 	} else if d == nil && err == nil {
 		return fiber.NewError(fiber.StatusNotFound)
 	}
 
-	return c.JSON(cordom.ResponseDTO[cordom.Payment]{
+	return c.JSON(cordom.ResponseDTO[cordom.Transaction]{
 		Status: "success",
 		Data:   d,
 	})
 }
 
-// CreateUserPayment get user information filtered by E-mail
+// CreateTransaction create a new transaction
 //
 //	@Summary		Create a transaction
 //	@Description	Create a new transaction record
 //	@Tags			Transactions
 //	@Security		ApiKeyAuth
 //	@Produce		json
-//	@Param			request	body		cordom.Payment	true	"Payment payload"
-//	@Success		200		{object}	cordom.ResponseDTO[cordom.Payment]
+//	@Param			request	body		cordom.Transaction	true	"Transaction payload"
+//	@Success		200		{object}	cordom.ResponseDTO[cordom.Transaction]
 //	@Failure		400
 //	@Failure		500
 //	@Router			/transactions [post]
-func (w *WalletController) CreateUserPayment(c *fiber.Ctx) error {
+func (w *TransactionController) CreateTransaction(c *fiber.Ctx) error {
 	user, ok := c.Locals("user").(*jwt.RegisteredClaims)
 	if !ok {
 		return fiber.NewError(fiber.ErrUnauthorized.Code)
 	}
-	body := cordom.Payment{UserId: user.Subject}
+	body := cordom.Transaction{UserId: user.Subject}
 	if err := c.BodyParser(&body); err != nil {
 		return fiber.NewError(fiber.StatusBadRequest, err.Error())
 	}
 	v := validator.NewValidator()
-	if err := v.StructExcept(body, "PaymentId"); err != nil {
-		return fiber.NewError(fiber.StatusBadRequest, "Not Found")
+	if err := v.StructExcept(body, "TransactionId"); err != nil {
+		return fiber.NewError(fiber.StatusBadRequest, err.Error())
 	}
-	p, err := w.service.CreatePayment(&body)
+	p, err := w.service.CreateTransaction(&body)
 	if err != nil {
 		return fiber.NewError(fiber.StatusInternalServerError, err.Error())
 	}
-	return c.JSON(cordom.ResponseDTO[cordom.Payment]{
+	return c.JSON(cordom.ResponseDTO[cordom.Transaction]{
 		Status: "success",
 		Data:   p,
 	})
 }
 
-//	DeletePaymentById
+// DeleteTransaction delete a transaction by its Id
 //
-// @Summary		Delete transaction
-// @Description	Delete transaction
-// @Tags			Transactions
-// @Security		ApiKeyAuth
-// @Produce		json
-// @Param			id	path		string	true	"Payment id"
-// @Success		200	{object}	cordom.EmptyResponseDTO
-// @Failure		400
-// @Failure		500
-// @Router			/transactions/{paymentId} [delete]
-func (w *WalletController) DeletePayment(c *fiber.Ctx) error {
-	p := cordom.Payment{}
+//	@Summary		Delete transaction
+//	@Description	Delete transaction
+//	@Tags			Transactions
+//	@Security		ApiKeyAuth
+//	@Produce		json
+//	@Param			id	path		string	true	"Transaction id"
+//	@Success		200	{object}	cordom.EmptyResponseDTO
+//	@Failure		400
+//	@Failure		500
+//	@Router			/transactions/{transactionId} [delete]
+func (w *TransactionController) DeleteTransaction(c *fiber.Ctx) error {
+	p := cordom.Transaction{}
 	if err := c.ParamsParser(&p); err != nil {
 		return fiber.NewError(fiber.StatusBadRequest, err.Error())
 	}
@@ -171,45 +168,45 @@ func (w *WalletController) DeletePayment(c *fiber.Ctx) error {
 		return fiber.NewError(fiber.ErrUnauthorized.Code)
 	}
 
-	transaction, err := w.service.GetPaymentById(user.Subject, p.PaymentId)
+	transaction, err := w.service.GetTransactionById(user.Subject, p.TransactionId)
 	if err != nil {
 		return fiber.NewError(fiber.StatusInternalServerError, err.Error())
 	} else if transaction == nil {
 		return fiber.NewError(fiber.StatusNotFound, "Not Found")
 	}
 
-	if err := w.service.DeletePayment(user.Subject, p.PaymentId); err != nil {
+	if err := w.service.DeleteTransaction(user.Subject, p.TransactionId); err != nil {
 		return fiber.NewError(fiber.StatusInternalServerError, err.Error())
 	}
 
 	return c.SendStatus(204)
 }
 
-// PutUserPayment
+// PutTransaction
 //
 //	@Summary		Put a transaction
 //	@Description	Update/Create a transaction record
 //	@Tags			Transactions
 //	@Security		ApiKeyAuth
 //	@Produce		json
-//	@Param			id		path		string			true	"Payment id"
-//	@Param			request	body		cordom.Payment	true	"Payment payload"
-//	@Success		200		{object}	cordom.ResponseDTO[cordom.Payment]
+//	@Param			id		path		string				true	"Transaction id"
+//	@Param			request	body		cordom.Transaction	true	"Transaction payload"
+//	@Success		200		{object}	cordom.ResponseDTO[cordom.Transaction]
 //	@Failure		400
 //	@Failure		500
-//	@Router			/transactions [put]
-func (w *WalletController) PutUserPayment(c *fiber.Ctx) error {
+//	@Router			/transactions/{transactionId} [put]
+func (w *TransactionController) PutTransaction(c *fiber.Ctx) error {
 	user, ok := c.Locals("user").(*jwt.RegisteredClaims)
 	if !ok {
 		return fiber.NewError(fiber.ErrUnauthorized.Code)
 	}
 
-	body := cordom.Payment{UserId: user.Subject}
+	body := cordom.Transaction{UserId: user.Subject}
 	if err := c.ParamsParser(&body); err != nil {
 		return fiber.NewError(fiber.StatusBadRequest, err.Error())
 	}
 
-	transaction, err := w.service.GetPaymentById(user.Subject, body.PaymentId)
+	transaction, err := w.service.GetTransactionById(user.Subject, body.TransactionId)
 	if err != nil {
 		return fiber.NewError(fiber.StatusInternalServerError, err.Error())
 	} else if transaction == nil {
@@ -225,14 +222,14 @@ func (w *WalletController) PutUserPayment(c *fiber.Ctx) error {
 		return fiber.NewError(fiber.StatusBadRequest, err.Error())
 	}
 
-	_, err = w.service.PutPayment(transaction)
+	_, err = w.service.PutTransaction(transaction)
 	if err != nil {
 		return fiber.NewError(fiber.StatusInternalServerError, err.Error())
 	}
 	return c.SendStatus(204)
 }
 
-// CreateTransactionDetail create transaction detail
+// CreateTransactionDetail
 //
 //	@Summary		Create a transaction detail
 //	@Description	Create a new transaction detail record
@@ -243,14 +240,14 @@ func (w *WalletController) PutUserPayment(c *fiber.Ctx) error {
 //	@Success		200		{object}	cordom.ResponseDTO[cordom.TransactionDetail]
 //	@Failure		400
 //	@Failure		500
-//	@Router			/transactions/{paymentId}/detail [post]
-func (w *WalletController) CreateTransactionDetail(c *fiber.Ctx) error {
+//	@Router			/transactions/{transactionId}/details [post]
+func (w *TransactionController) CreateTransactionDetail(c *fiber.Ctx) error {
 	user, ok := c.Locals("user").(*jwt.RegisteredClaims)
 	if !ok {
 		return fiber.NewError(fiber.ErrUnauthorized.Code)
 	}
 
-	p := cordom.Payment{}
+	p := cordom.Transaction{}
 	if err := c.ParamsParser(&p); err != nil {
 		return fiber.NewError(fiber.StatusBadRequest, err.Error())
 	}
@@ -260,7 +257,7 @@ func (w *WalletController) CreateTransactionDetail(c *fiber.Ctx) error {
 		return fiber.NewError(fiber.StatusBadRequest, err.Error())
 	}
 
-	body := cordom.TransactionDetail{UserId: user.ID, TransactionId: p.PaymentId}
+	body := cordom.TransactionDetail{UserId: user.ID, TransactionId: p.TransactionId}
 	if err := c.BodyParser(&body); err != nil {
 		return fiber.NewError(fiber.StatusBadRequest, err.Error())
 	}
@@ -280,7 +277,7 @@ func (w *WalletController) CreateTransactionDetail(c *fiber.Ctx) error {
 	})
 }
 
-// ListTransasctionDetails list transaction details
+// ListTransasctionDetails
 //
 //	@Summary		List transaction details
 //	@Description	List transaction details
@@ -292,8 +289,8 @@ func (w *WalletController) CreateTransactionDetail(c *fiber.Ctx) error {
 //	@Success		200			{object}	cordom.ResponseDTO[cordom.PagedDTO[cordom.TransactionDetail]]
 //	@Failure		400
 //	@Failure		500
-//	@Router			/transactions/{paymentId}/details [get]
-func (w *WalletController) ListTransactionDetails(c *fiber.Ctx) error {
+//	@Router			/transactions/{transactionId}/details [get]
+func (w *TransactionController) ListTransactionDetails(c *fiber.Ctx) error {
 	q := cordom.PagedDTOQuery{}
 	if err := c.QueryParser(&q); err != nil {
 		return fiber.NewError(fiber.StatusBadRequest, err.Error())
@@ -304,7 +301,7 @@ func (w *WalletController) ListTransactionDetails(c *fiber.Ctx) error {
 		return fiber.NewError(fiber.StatusBadRequest, err.Error())
 	}
 
-	p := cordom.Payment{}
+	p := cordom.Transaction{}
 	if err := c.ParamsParser(&p); err != nil {
 		return fiber.NewError(fiber.StatusBadRequest, err.Error())
 	}
@@ -314,7 +311,7 @@ func (w *WalletController) ListTransactionDetails(c *fiber.Ctx) error {
 		return fiber.NewError(fiber.ErrUnauthorized.Code)
 	}
 
-	out, err := w.service.ListTransactionDetails(p.PaymentId, q)
+	out, err := w.service.ListTransactionDetails(p.TransactionId, q)
 	if err != nil {
 		return fiber.NewError(fiber.StatusBadRequest, err.Error())
 	}
@@ -339,7 +336,7 @@ func (w *WalletController) ListTransactionDetails(c *fiber.Ctx) error {
 //	@Failure		404
 //	@Failure		500
 //	@Router			/transactions/{transactionId}/details/{detailId} [get]
-func (w *WalletController) GetTransactionDetail(c *fiber.Ctx) error {
+func (w *TransactionController) GetTransactionDetail(c *fiber.Ctx) error {
 	p := cordom.TransactionDetail{}
 	if err := c.ParamsParser(&p); err != nil {
 		return fiber.NewError(fiber.StatusBadRequest, err.Error())
@@ -360,6 +357,53 @@ func (w *WalletController) GetTransactionDetail(c *fiber.Ctx) error {
 		return fiber.NewError(fiber.StatusInternalServerError, err.Error())
 	} else if d == nil && err == nil {
 		return fiber.NewError(fiber.StatusNotFound)
+	}
+
+	return c.JSON(cordom.ResponseDTO[cordom.TransactionDetail]{
+		Status: "success",
+		Data:   d,
+	})
+}
+
+// Delete delete a transaction detail by its id
+//
+//	@Summary		Delete a transaction detail by its id
+//	@Description	Delete a transaction detail by its id
+//	@Tags			Transactions
+//	@Security		ApiKeyAuth
+//	@Produce		json
+//	@Param			transactionId	path		string	true	"Transaction id"
+//	@Param			detailId		path		string	true	"Detail id"
+//	@Success		200				{object}	cordom.ResponseDTO[cordom.TransactionDetail]
+//	@Failure		400
+//	@Failure		404
+//	@Failure		500
+//	@Router			/transactions/{transactionId}/details/{detailId} [delete]
+func (w *TransactionController) DeleteTransactionDetail(c *fiber.Ctx) error {
+	p := cordom.TransactionDetail{}
+	if err := c.ParamsParser(&p); err != nil {
+		return fiber.NewError(fiber.StatusBadRequest, err.Error())
+	}
+
+	v := validator.NewValidator()
+	if err := v.StructPartial(p, "detailId", "transactionId"); err != nil {
+		return fiber.NewError(fiber.StatusBadRequest, err.Error())
+	}
+
+	_, ok := c.Locals("user").(*jwt.RegisteredClaims)
+	if !ok {
+		return fiber.NewError(fiber.ErrUnauthorized.Code)
+	}
+
+	d, err := w.service.GetTransactionDetail(p.TransactionId, p.DetailId)
+	if err != nil {
+		return fiber.NewError(fiber.StatusInternalServerError, err.Error())
+	} else if d == nil && err == nil {
+		return fiber.NewError(fiber.StatusNotFound)
+	}
+
+	if err := w.service.DeleteTransactionDetail(p.TransactionId, p.DetailId); err != nil {
+		return fiber.NewError(fiber.StatusInternalServerError, "unable to delete detail")
 	}
 
 	return c.JSON(cordom.ResponseDTO[cordom.TransactionDetail]{
